style(header): fixed menu on small devices

--- a/Styles/header.css
+++ b/Styles/header.css
@@ -17,21 +17,64 @@
   background-color: transparent;
 }
 
-.navbar {
-  display: none;
+.header__btn--close {
+  align-self: flex-end;
 }
 
-.nav__list {
+.menu {
   display: flex;
-  gap: 5rem;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: min(80%, 40rem);
+  height: 100vh;
+  padding: 2rem;
+  background: linear-gradient(141deg, #fff 0%, #f7f7f7 51%, #fff 75%);
+  z-index: 50;
+  transform: translateX(100%);
 }
 
-.nav__link {
+.menu::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 99%;
+  height: 100%;
+  width: 100vw;
+  background-color: #0a071380;
+  z-index: 100;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease-in-out;
+}
+
+.menu--open {
+  transform: translateX(0);
+}
+
+.menu--open::after {
+  opacity: 1;
+  visibility: visible;
+}
+
+.menu__list {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem;
+  text-align: center;
+}
+
+.menu__link {
   position: relative;
   color: var(--dark-color);
 }
 
-.nav__link::before {
+.menu__link::before {
   content: "";
   width: 100%;
   display: block;
@@ -43,25 +86,52 @@
   transition: transform 0.3s ease-in-out;
 }
 
-.nav__link:hover::before {
+.menu__link:hover::before {
   transform: scaleX(1);
   transform-origin: left;
 }
 
-.header__demo {
-  display: none;
+.menu__demo:last-of-type {
+  margin-top: auto;
 }
 
 @media screen and (min-width: 768px) {
-  .navbar {
-    display: block;
+  .menu {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    top: unset;
+    right: unset;
+    height: auto;
+    width: 100%;
+    padding: unset;
+    background: none;
+    transform: unset;
+  }
+
+  .menu::after {
+    display: none;
+  }
+
+  .menu__list {
+    margin-left: auto;
+    flex-direction: row;
+    gap: 2rem;
+  }
+
+  .menu__demo {
+    margin-left: auto;
   }
 
   .header__btn {
     display: none;
   }
+}
 
-  .header__demo {
-    display: block;
+@media screen and (min-width: 992px) {
+  .menu__list {
+    gap: 5rem;
   }
 }
